[package]
name = "ethstore"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.3"
libc = "0.2"
rand = "0.4"
ethkey = { path = "../ethkey" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"
tiny-keccak = "1.4"
time = "0.1.34"
itertools = "0.5"
parking_lot = "0.6"
ethcore-crypto = { path = "../ethcore/crypto" }
ethereum-types = "0.3"
dir = { path = "../util/dir" }
smallvec = "0.4"
parity-wordlist = "1.0"
tempdir = "0.3"

[dev-dependencies]
matches = "0.1"

[lib]
