[package]
name = "evmbin"
description = "Parity's EVM implementation"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[[bin]]
name = "parity-evm"
path = "./src/main.rs"

[dependencies]
common-types = { path = "../ethcore/types" }
chrono = { version = "0.4.6", features = ["serde"] }
docopt = "1.0"
env_logger = "0.5"
ethcore = { path = "../ethcore", features = ["test-helpers", "json-tests", "to-pod-full"] }
ethereum-types = "0.6.0"
ethjson = { path = "../json" }
evm = { path = "../ethcore/evm" }
fern = { version = "0.5", features = ["colored"] }
log = { version = "0.4", features = ["std", "serde", "max_level_trace", "release_max_level_info"] }
panic_hook = { path = "../util/panic-hook" }
parity-bytes = "0.1"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
vm = { path = "../ethcore/vm" }

[dev-dependencies]
pretty_assertions = "0.1"
tempdir = "0.3"

[features]
evm-debug = ["ethcore/evm-debug-tests"]
