[package]
description = "Fetching hash-addressed content."
homepage = "http://parity.io"
license = "GPL-3.0"
name = "parity-hash-fetch"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
futures = "0.1"
futures-cpupool = "0.1"
log = "0.3"
mime = "0.3"
mime_guess = "2.0.0-alpha.2"
rand = "0.4"
rustc-hex = "1.0"
fetch = { path = "../util/fetch" }
ethcore-bytes = { path = "../util/bytes" }
ethereum-types = "0.3"
parity-reactor = { path = "../util/reactor" }
keccak-hash = { path = "../util/hash" }
registrar = { path = "../registrar" }

ethabi = "5.1"
ethabi-derive = "5.0"
ethabi-contract = "5.0"

[dev-dependencies]
hyper = "0.11"
parking_lot = "0.5"
fake-fetch = { path = "../util/fake-fetch" }
