[package]
description = "Hardware wallet support."
homepage = "http://parity.io"
license = "GPL-3.0"
name = "hardware-wallet"
version = "1.9.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.3"
parking_lot = "0.4"
protobuf = "1.4"
hidapi = { git = "https://github.com/paritytech/hidapi-rs" }
libusb = { git = "https://github.com/paritytech/libusb-rs" }
trezor-sys = { git = "https://github.com/paritytech/trezor-sys" }
ethkey = { path = "../ethkey" }
ethcore-bigint = { path = "../util/bigint" }

[dev-dependencies]
rustc-hex = "1.0"
