[package]
description = "Types that implement IPC and are common to multiple modules."
name = "ipc-common-types"
version = "1.7.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"

[build-dependencies]
ethcore-ipc-codegen = { path = "../ipc/codegen" }

[dependencies]
semver = "0.5"
ethcore-ipc = { path = "../ipc/rpc" }
ethcore-util = { path = "../util" }

[profile.release]
debug = true
lto = false
