[package]
description = "Parity IPFS-compatible API"
name = "parity-ipfs-api"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethcore = { path = "../ethcore" }
parity-bytes = "0.1"
ethereum-types = "0.4"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", rev = "903eda7" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc.git", rev = "903eda7" }
rlp = { version = "0.3.0", features = ["ethereum"] }
cid = "0.3"
multihash = "0.8"
unicase = "2.0"

[dev-dependencies]
ethcore = { path = "../ethcore", features = ["test-helpers"] }
