[package]
description = "Parity Ethereum IPFS-compatible API"
name = "parity-ipfs-api"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
common-types = { path = "../ethcore/types" }
ethcore = { path = "../ethcore" }
parity-bytes = "0.1"
ethereum-types = "0.6.0"
jsonrpc-core = "12.0.0"
jsonrpc-http-server = "12.0.0"
rlp = "0.4.0"
cid = "0.3"
multihash = "0.8"
unicase = "2.0"

[dev-dependencies]
ethcore = { path = "../ethcore", features = ["test-helpers"] }
