[package]
description = "Parity Ethereum IPFS-compatible API"
name = "parity-ipfs-api"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client-traits = { path = "../ethcore/client-traits" }
common-types = { path = "../ethcore/types" }
ethcore = { path = "../ethcore" }
bytes = { package = "parity-bytes", version = "0.1"}
ethereum-types = "0.8.0"
jsonrpc-core = "14.0.0"
http = { package = "jsonrpc-http-server", version = "14.0.0"}
rlp = "0.4.0"
cid = "0.3"
multihash = "0.8"
unicase = "2.0"

[dev-dependencies]
ethcore = { path = "../ethcore", features = ["test-helpers"] }
