[package]
description = "Parity built-in dapps."
name = "parity-ui-dev"
version = "1.8.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"

[features]
default = ["with-syntex"]
with-syntex = ["parity-dapps-glue/with-syntex"]

[build-dependencies]
parity-dapps-glue = "1.8"

[dependencies]
parity-dapps-glue = "1.8"

