[package]
name = "ethjson"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
build = "build.rs"

[dependencies]
ethcore-util = { path = "../util" }
rustc-serialize = "0.3"
serde = "0.8"
serde_json = "0.8"
serde_macros = { version = "0.8", optional = true }
clippy = { version = "0.0.96", optional = true}

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]
