[package]
description = "Ethcore client."
name = "ethcore-logger"
version = "1.7.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.3"
env_logger = "0.3"
ethcore-util = { path = "../util" }
isatty = "0.1"
lazy_static = "0.2"
regex = "0.1"
time = "0.1"

[profile.release]
debug = true
lto = false
