[package]
description = "Parity Miner interface."
name = "ethcore-miner"
homepage = "http://parity.io"
license = "GPL-3.0"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
# Only work_notify, consider a separate crate
ethash = { path = "../ethash", optional = true }
fetch = { path = "../util/fetch", optional = true }
hyper = { version = "0.12", optional = true }
url = { version = "1", optional = true }

# Miner
ansi_term = "0.10"
common-types = { path = "../ethcore/types" }
error-chain = "0.12"
ethabi = { git = "https://github.com/ordian/ethabi" }
ethabi-derive = { git = "https://github.com/ordian/ethabi" }
ethabi-contract = { git = "https://github.com/ordian/ethabi" }
ethcore-call-contract = { path = "../ethcore/call-contract" }
ethereum-types = { git = "https://github.com/ordian/parity-common" }
futures = "0.1"
heapsize = "0.4"
keccak-hash = { git = "https://github.com/ordian/parity-common" }
linked-hash-map = "0.5"
log = "0.4"
parity-runtime = { path = "../util/runtime" }
parking_lot = "0.7"
price-info = { path = "./price-info", optional = true }
rlp = { git = "https://github.com/ordian/parity-common" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
trace-time = "0.1"
transaction-pool = "2.0"

[dev-dependencies]
env_logger = "0.5"
ethkey = { path = "../accounts/ethkey" }
rustc-hex = "1.0"

[features]
work-notify = ["ethash", "fetch", "hyper", "url"]
