[package]
description = "OpenEthereum Miner Interface."
name = "ethcore-miner"
repository = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
# Only work_notify, consider a separate crate
ethash = { path = "../ethash", optional = true }
fetch = { path = "../util/fetch", optional = true }
hyper = { version = "0.12", optional = true }
url = { version = "2.1.1", optional = true }

# Miner
ansi_term = "0.11"
common-types = { path = "../ethcore/types" }
ethabi = "12.0"
ethabi-derive = "12.0"
ethabi-contract = "11.0"
ethcore-call-contract = { path = "../ethcore/call-contract" }
ethereum-types = "0.9.0"
futures = "0.1"
parity-util-mem = "0.6.1"
keccak-hash = "0.5.0"
linked-hash-map = "0.5"
log = "0.4"
parity-runtime = "0.1.1"
parking_lot = "0.10.0"
price-info = { path = "./price-info", optional = true }
registrar = { path = "../util/registrar" }
rlp = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
trace-time = "0.1"
transaction-pool = "2.0.1"

[dev-dependencies]
env_logger = "0.5"
parity-crypto = { version = "0.6.1", features = ["publickey"] }
rustc-hex = "2.1.0"

[features]
work-notify = ["ethash", "fetch", "hyper", "url"]
