[package]
description = "C bindings for the Parity Ethereum client"
name = "parity-clib"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]
name = "parity"
crate-type = ["cdylib", "staticlib"]

[dependencies]
panic_hook = { path = "../util/panic-hook" }
parity-ethereum = { path = "../", default-features = false }
jni = { version = "0.10.1", optional = true }

[features]
default = []
final = ["parity-ethereum/final"]
