[package]
description = "C bindings for the Parity Ethereum client"
name = "parity-clib"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]
name = "parity"
crate-type = ["cdylib", "staticlib"]

[dependencies]
futures = "0.1.6"
jni = { version = "0.10.1", optional = true }
panic_hook = { path = "../util/panic-hook" }
parity-ethereum = { path = "../", default-features = false }
tokio = "0.1.11"
tokio-current-thread = "0.1.3"

[features]
default = []
final = ["parity-ethereum/final"]
