[package]
description = "Fetch current ETH price"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "price-info"
version = "1.11.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
fetch = { path = "../util/fetch" }
futures = "0.1"
futures-cpupool = "0.1"
log = "0.3"
serde_json = "1.0"

[dev-dependencies]
hyper = "0.11"
parking_lot = "0.5"
fake-fetch = { path = "../util/fake-fetch" }
