[package]
description = "Parity Private Transactions"
name = "privatetransactions"
version = "1.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
parking_lot = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1"
rustc-hex = "1.0"
tiny-keccak = "1.3"
log = "0.3"
ethabi = "4.0"
ethereum-types = "0.1"
patricia-trie = { path = "../util/patricia_trie" }
native-contracts = { path = "../ethcore/native_contracts" }
keccak-hash = { path = "../util/hash" }
ethcore = { path = "../ethcore" }
ethcrypto = { path = "../ethcrypto" }
ethkey = { path = "../ethkey" }
ethjson = { path = "../json" }
rlp = { path = "../util/rlp" }
fetch = { path = "../util/fetch" }
ethcore-bytes = { path = "../util/bytes" }
ethcore-transaction = { path = "../ethcore/transaction" }
ethcore-miner = { path = "../miner" }