[package]
description = "Parity Private Transactions"
name = "private_transactions"
version = "1.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
parking_lot = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1"
rustc-hex = "1.0"
tiny-keccak = "1.3"
log = "0.3"
rand = "0.3"
ethabi = "5.1"
ethabi-derive = "5.0"
ethabi-contract = "5.0"
ethereum-types = "0.2"
patricia-trie = { path = "../util/patricia_trie" }
keccak-hash = { path = "../util/hash" }
ethcore = { path = "../ethcore" }
ethcrypto = { path = "../ethcrypto" }
ethkey = { path = "../ethkey" }
ethjson = { path = "../json" }
rlp = { path = "../util/rlp" }
fetch = { path = "../util/fetch" }
ethcore-bytes = { path = "../util/bytes" }
ethcore-transaction = { path = "../ethcore/transaction" }
ethcore-miner = { path = "../miner" }
ethcore-logger = { path = "../logger" }