[package]
authors = ["Ethcore <admin@ethcore.io>"]
description = "Parity Cli Tool"
homepage = "http://ethcore.io"
license = "GPL-3.0"
name = "rpc-cli"
version = "1.4.0"

[dependencies]
futures = "0.1"
rpassword = "0.3.0"
ethcore-bigint = { path = "../util/bigint" }
ethcore-rpc = { path = "../rpc" }
parity-rpc-client = { path = "../rpc_client" }
ethcore-util = { path = "../util" }
