[package]
authors = ["Parity <admin@parity.io>"]
description = "Parity Rpc Client"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "parity-rpc-client"
version = "1.4.0"

[dependencies]
futures = "0.1"
log = "0.3.6"
rand = "0.3.14"
serde = "1.0"
serde_json = "1.0"
tempdir = "0.3.5"
url = "1.2.0"
matches = "0.1"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.7" }
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.7" }
parity-rpc = { path = "../rpc" }
ethcore-util = { path = "../util" }
hash = { path = "../util/hash" }
