[package]
description = "Parity Ethereum (EthCore) Secret Store"
name = "ethcore-secretstore"
version = "1.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
byteorder = "1.0"
client-traits = { path = "../ethcore/client-traits" }
common-types = { path = "../ethcore/types" }
ethabi = "8.0"
ethabi-contract = "8.0"
ethabi-derive = "8.0"
ethcore = { path = "../ethcore" }
ethcore-accounts = { path = "../accounts", optional = true}
ethcore-call-contract = { path = "../ethcore/call-contract" }
ethcore-sync = { path = "../ethcore/sync" }
ethereum-types = "0.6.0"
ethkey = { path = "../accounts/ethkey" }
futures = "0.1"
hyper = { version = "0.12", default-features = false }
keccak-hash = "0.2.0"
kvdb = "0.1"
lazy_static = "1.0"
log = "0.4"
parity-bytes = "0.1"
parity-crypto = "0.4.0"
parity-runtime = { path = "../util/runtime" }
parking_lot = "0.9"
percent-encoding = "2.1.0"
registrar = { path = "../util/registrar" }
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak = "1.4"
tokio = "~0.1.11"
tokio-io = "0.1"
tokio-service = "0.1"
url = "2.1.0"
jsonrpc-server-utils = "13.2.0"

[dev-dependencies]
env_logger = "0.5"
ethcore = { path = "../ethcore", features = ["test-helpers"] }
tempdir = "0.3"
kvdb-rocksdb = "0.1.5"

[features]
accounts = ["ethcore-accounts"]
